--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -160,7 +160,7 @@
                                 </li>
                                 <li>
                                     <a data-toggle="tab" href="#Featured" role="tab" aria-controls="Featured" aria-selected="false">
-                                        Featured Products
+                                        Yêu thích
                                     </a>
                                 </li>
                                 <li>
