tôi đang định làm cá nhân hóa cho đồ án của tôi

--- a/src/app/giohang/checkout/checkout.component.html
+++ b/src/app/giohang/checkout/checkout.component.html
@@ -1,1 +1,103 @@
-<p>checkout works!</p>
+<div class="breadcrumbs_area">
+    <div class="container">   
+        <div class="row">
+            <div class="col-12">
+                <div class="breadcrumb_content">
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li>Giỏ Hàng</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>         
+</div>
+<!--breadcrumbs area end-->
+
+<!--shopping cart area start -->
+<div class="cart_page_bg">
+    <div class="container">
+        <div class="shopping_cart_area">
+            <form action="#"> 
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="table_desc">
+                                <div class="cart_page table-responsive">
+                                    <table>
+                                        <thead>
+                                            <tr>
+                                                <th class="product_remove">Xóa</th>
+                                                <th class="product_thumb">Hình ảnh</th>
+                                                <th class="product_name">Tên sản phẩm</th>
+                                                <th class="product-price">Đơn giá</th>
+                                                <th class="product_quantity">Số lượng</th>
+                                                <th class="product_total">Thành tiền</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+
+
+                                            <tr>
+                                               <td class="product_remove"><a href="#"><i class="fa fa-trash-o"></i></a></td>
+                                                <td class="product_thumb"><a href="#"><img src="assets/img/s-product/product3.jpg" alt=""></a></td>
+                                                <td class="product_name"><a href="#">Handbag elit</a></td>
+                                                <td class="product-price">£80.00</td>
+                                                <td class="product_quantity"><label>Quantity</label> <input min="1" max="100" value="1" type="number"></td>
+                                                <td class="product_total">£160.00</td>
+
+
+                                            </tr>
+
+                                        </tbody>
+                                    </table>   
+                                </div>  
+                                <div class="cart_submit">
+                                    <button type="submit">cập nhật giỏ hàng</button>
+                                </div>      
+                            </div>
+                         </div>
+                     </div>
+                     <!--coupon code area start-->
+                    <div class="coupon_area">
+                        <div class="row">
+                            <div class="col-lg-6 col-md-6">
+                                <div class="coupon_code left">
+                                    <h3>Coupon</h3>
+                                    <div class="coupon_inner">   
+                                        <p>Nhập coupon để được giảm giá.</p>                                
+                                        <input placeholder="Coupon code" type="text">
+                                        <button type="submit">Xác nhận</button>
+                                    </div>    
+                                </div>
+                            </div>
+                            <div class="col-lg-6 col-md-6">
+                                <div class="coupon_code right">
+                                    <h3>Tổng cộng</h3>
+                                    <div class="coupon_inner">
+                                       <div class="cart_subtotal">
+                                           <p>Tổng tiền</p>
+                                           <p class="cart_amount">7 củ</p>
+                                       </div>
+                                       <div class="cart_subtotal ">
+                                           <p>Shipping</p>
+                                           <p class="cart_amount"><span></span></p>
+                                       </div>
+                                       <a href="#">Calculate shipping</a>
+
+                                       <div class="cart_subtotal">
+                                           <p>Tổng cộng</p>
+                                           <p class="cart_amount">£215.00</p>
+                                       </div>
+                                       <div class="checkout_btn">
+                                           <a href="#">Tiến hành đặt hàng</a>
+                                       </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!--coupon code area end-->
+                </form>   
+        </div>
+    </div>
+</div>
