--- a/src/app/sanpham/sanpham.component.html
+++ b/src/app/sanpham/sanpham.component.html
@@ -110,207 +110,7 @@
             <div class="col-lg-9 col-md-12">
                 
                 <!--shop banner area start-->
-                <div class="shop_banner_area mb-30">
-                    <div class="row">
-                        <div class="col-12">
-                            <div class="shop_banner_thumb">
-                                <img src="assets/img/bg/banner23.jpg" alt="">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!--shop banner area end-->
-                <!--shop toolbar start-->
-                <div class="shop_toolbar_wrapper">
-                    <div class="shop_toolbar_btn">
-                        <button data-role="grid_4" type="button"  class="active btn-grid-4" data-toggle="tooltip" title="4"></button>
-                        <button data-role="grid_3" type="button" class=" btn-grid-3" data-toggle="tooltip" title="3"></button>
-                        <button data-role="grid_list" type="button"  class="btn-list" data-toggle="tooltip" title="List"></button>
-                    </div>
-                    <div class="">
-                        <form class="" action="#">
-                            <select class="form-control" name="orderby" id="short">
-
-                                <option selected value="1">Sort by average rating</option>
-                                <option  value="2">Sort by popularity</option>
-                                <option value="3">Sort by newness</option>
-                                <option value="4">Sort by price: low to high</option>
-                                <option value="5">Sort by price: high to low</option>
-                                <option value="6">Product Name: Z</option>
-                            </select>
-                        </form>
-                    </div>
-                    <div class="page_amount">
-                        <p>Showing 1–9 of 21 results</p>
-                    </div>
-                </div>
-                 <!--shop toolbar end-->
-                 <div class="row shop_wrapper">
-                     <ng-container *ngFor="let sp of list_item">
-                    <div class="col-lg-3 col-md-4 col-12 ">
-                        <article class="single_product">
-                            <figure>
-                                <div class="product_thumb">
-                                    <a class="primary_img" href="product-details.html"><img src="assets/img/product/product1.jpg" alt=""></a>
-                                    <a class="secondary_img" href="product-details.html"><img src="assets/img/product/product2.jpg" alt=""></a>
-                                    <div class="label_product">
-                                        <span class="label_sale">-56%</span>
-                                    </div>
-                                    <div class="quick_button">
-                                        <a href="#" data-toggle="modal" data-target="#modal_box"  title="quick view"><i class="icon-eye"></i></a>
-                                    </div>
-                                </div>
-                                <div class="product_content grid_content">
-                                    <div class="product_content_inner">
-                                        <p class="manufacture_product"><a href="#">còn lại:{{sp.soLuongCon}}</a></p>
-                                        <h4 class="product_name"><a href="product-details.html">{{sp.tenSanPham}}</a></h4>
-                                        <div class="product_rating">
-                                           <ul>
-                                               <li><a href="#"><i class="ion-android-star-outline"></i></a></li>
-                                               <li><a href="#"><i class="ion-android-star-outline"></i></a></li>
-                                               <li><a href="#"><i class="ion-android-star-outline"></i></a></li>
-                                               <li><a href="#"><i class="ion-android-star-outline"></i></a></li>
-                                               <li><a href="#"><i class="ion-android-star-outline"></i></a></li>
-                                           </ul>
-                                        </div>
-                                        <div class="price_box"> 
-                                            <span class="old_price">$320.00</span> 
-                                            <span class="current_price">{{sp.giahientai.gia}}</span>
-                                        </div>
-                                    </div>
-                                    <div class="action_links">
-                                         <ul>
-                                            <li class="add_to_cart"><a href="cart.html" title="thêm vào giỏ hàng">Thêm</a></li>
-                                            <li class="wishlist"><a href="wishlist.html"  title="Thêm vào danh sách yêu thích"><i class="icon-heart"></i></a></li>
-                                            <li class="compare"><a href="#" title="So sánh"><i class="icon-rotate-cw"></i></a></li> 
-                                        </ul>
-                                    </div> 
-                                </div>
-                                <div class="product_content list_content">
-                                    <div class="left_caption">
-                                       <p class="manufacture_product"><a href="#">Parts</a></p>
-                                        <h4 class="product_name"><a href="product-details.html">{{sp.tenSanPham}}</a></h4>
-                                        <div class="product_rating">
-                                           <ul>
-                                               <li><a href="#"><i class="ion-android-star-outline"></i></a></li>
-                                               <li><a href="#"><i class="ion-android-star-outline"></i></a></li>
-                                               <li><a href="#"><i class="ion-android-star-outline"></i></a></li>
-                                               <li><a href="#"><i class="ion-android-star-outline"></i></a></li>
-                                               <li><a href="#"><i class="ion-android-star-outline"></i></a></li>
-                                           </ul>
-                                        </div>
-                                        <div class="price_box"> 
-                                            <span class="old_price">$320.00</span> 
-                                            <span class="current_price">$120.00</span>
-                                        </div>
-                                        <div class="product_desc">
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco,Proin lectus ipsum, gravida et mattis vulputate, tristique ut lectus</p>
-                                        </div>
-                                    </div>
-                                    <div class="right_caption">
-                                        <p class="text_available">Availability: <span>In Stock</span></p>
-                                        <div class="action_links">
-                                            <ul> 
-                                                <li class="add_to_cart"><a href="cart.html" title="Add to cart">Add to cart</a></li>
-                                                <li class="wishlist"><a href="wishlist.html" title="Add to Wishlist"><i class="icon-heart"></i>  Add to Wishlist</a></li>
-                                                <li class="compare"><a href="#" title="compare"><i class="icon-rotate-cw"></i>Add to Compare</a></li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </div>
-                            </figure>
-                        </article>
-                    </div>
-                    <!-- <div class="col-lg-3 col-md-4 col-12 ">
-                        <article class="single_product">
-                            <figure>
-                                <div class="product_thumb">
-                                    <a class="primary_img" href="product-details.html"><img src="assets/img/product/product5.jpg" alt=""></a>
-                                    <a class="secondary_img" href="product-details.html"><img src="assets/img/product/product6.jpg" alt=""></a>
-                                    <div class="label_product">
-                                        <span class="label_new">new</span>
-                                    </div>
-                                    <div class="quick_button">
-                                        <a href="#" data-toggle="modal" data-target="#modal_box"  title="quick view"><i class="icon-eye"></i></a>
-                                    </div>
-                                </div>
-                                <div class="product_content grid_content">
-                                    <div class="product_content_inner">
-                                        <p class="manufacture_product"><a href="#">Parts</a></p>
-                                        <h4 class="product_name"><a href="product-details.html">Cas Meque Metus</a></h4>
-                                        <div class="product_rating">
-                                           <ul>
-                                               <li><a href="#"><i class="ion-android-star-outline"></i></a></li>
-                                               <li><a href="#"><i class="ion-android-star-outline"></i></a></li>
-                                               <li><a href="#"><i class="ion-android-star-outline"></i></a></li>
-                                               <li><a href="#"><i class="ion-android-star-outline"></i></a></li>
-                                               <li><a href="#"><i class="ion-android-star-outline"></i></a></li>
-                                           </ul>
-                                        </div>
-                                        <div class="price_box"> 
-                                            <span class="old_price">$280.00</span> 
-                                            <span class="current_price">$140.00</span>
-                                        </div>
-                                    </div>
-                                    <div class="action_links">
-                                         <ul>
-                                            <li class="add_to_cart"><a href="cart.html" title="Add to cart">Add to cart</a></li>
-                                            <li class="wishlist"><a href="wishlist.html"  title="Add to Wishlist"><i class="icon-heart"></i></a></li>
-                                            <li class="compare"><a href="#" title="Add to Compare"><i class="icon-rotate-cw"></i></a></li> 
-                                        </ul>
-                                    </div> 
-                                </div>
-                                <div class="product_content list_content">
-                                    <div class="left_caption">
-                                       <p class="manufacture_product"><a href="#">Parts</a></p>
-                                        <h4 class="product_name"><a href="product-details.html">Cas Meque Metus</a></h4>
-                                        <div class="product_rating">
-                                           <ul>
-                                               <li><a href="#"><i class="ion-android-star-outline"></i></a></li>
-                                               <li><a href="#"><i class="ion-android-star-outline"></i></a></li>
-                                               <li><a href="#"><i class="ion-android-star-outline"></i></a></li>
-                                               <li><a href="#"><i class="ion-android-star-outline"></i></a></li>
-                                               <li><a href="#"><i class="ion-android-star-outline"></i></a></li>
-                                           </ul>
-                                        </div>
-                                        <div class="price_box"> 
-                                            <span class="old_price">$280.00</span> 
-                                            <span class="current_price">$140.00</span>
-                                        </div>
-                                        <div class="product_desc">
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco,Proin lectus ipsum, gravida et mattis vulputate, tristique ut lectus</p>
-                                        </div>
-                                    </div>
-                                    <div class="right_caption">
-                                        <p class="text_available">Availability: <span>In Stock</span></p>
-                                        <div class="action_links">
-                                            <ul> 
-                                                <li class="add_to_cart"><a href="cart.html" title="Add to cart">Add to cart</a></li>
-                                                <li class="wishlist"><a href="wishlist.html" title="Add to Wishlist"><i class="icon-heart"></i>  Add to Wishlist</a></li>
-                                                <li class="compare"><a href="#" title="compare"><i class="icon-rotate-cw"></i>Add to Compare</a></li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </div>
-                            </figure>
-                        </article>
-                    </div> -->
-</ng-container>
-                </div>
-
-                <div class="shop_toolbar t_bottom">
-                    <div class="pagination">
-                        <ul>
-                            <li class="current">1</li>
-                            <li><a href="#">2</a></li>
-                            <li><a href="#">3</a></li>
-                            <li class="next"><a href="#">next</a></li>
-                            <li><a href="#">>></a></li>
-                        </ul>
-                    </div>
-                </div>
-                <!--shop toolbar end-->
-                <!--shop wrapper end-->
+                <router-outlet></router-outlet>
             </div>
         </div>
     </div>
