--- a/src/app/sanpham/sptheoloai/sptheoloai.component.html
+++ b/src/app/sanpham/sptheoloai/sptheoloai.component.html
@@ -31,7 +31,7 @@
                         </form>
                     </div>
                     <div class="page_amount">
-                        <p>Showing 1–9 of 21 results</p>
+                        <p>Showing 1–9 of {{sptheoloai[0].total}} results</p>
                     </div>
                 </div>
                  <!--shop toolbar end-->
@@ -52,8 +52,7 @@
                                 </div>
                                 <div class="product_content grid_content">
                                     <div class="product_content_inner">
-                                        <p class="manufacture_product"><a href="#">Parts</a></p>
-                                        <h4 class="product_name"><a href="product-details.html">{{sploai.tenSanPham}}</a></h4>
+                                        <h4 class="product_name"><a [routerlink]="['chi-tiet/',sploai.link]">{{sploai.tenSanPham}}</a></h4>
                                         <div class="product_rating">
                                            <ul>
                                                <li><a href="#"><i class="ion-android-star-outline"></i></a></li>
@@ -65,12 +64,12 @@
                                         </div>
                                         <div class="price_box"> 
                                             <span class="old_price">$320.00</span> 
-                                            <span class="current_price">$120.00</span>
+                                            <span class="current_price">{{sploai.giahientai.gia | currency:'VND':true:'1.0-2'}}</span>
                                         </div>
                                     </div>
                                     <div class="action_links">
                                          <ul>
-                                            <li class="add_to_cart"><a href="cart.html" title="Add to cart">Add to cart</a></li>
+                                            <li class="add_to_cart"><a (click)="addToCart(sploai)" title="Add to cart">Add to cart</a></li>
                                             <li class="wishlist"><a href="wishlist.html"  title="Add to Wishlist"><i class="icon-heart"></i></a></li>
                                             <li class="compare"><a href="#" title="Add to Compare"><i class="icon-rotate-cw"></i></a></li> 
                                         </ul>
@@ -78,8 +77,7 @@
                                 </div>
                                 <div class="product_content list_content">
                                     <div class="left_caption">
-                                       <p class="manufacture_product"><a href="#">Parts</a></p>
-                                        <h4 class="product_name"><a href="product-details.html">Nunc Neque Eros</a></h4>
+                                        <h4 class="product_name"><a [routerlink]="['chi-tiet/',sploai.link]">{{sploai.tenSanPham}}</a></h4>
                                         <div class="product_rating">
                                            <ul>
                                                <li><a href="#"><i class="ion-android-star-outline"></i></a></li>
@@ -91,17 +89,19 @@
                                         </div>
                                         <div class="price_box"> 
                                             <span class="old_price">$320.00</span> 
-                                            <span class="current_price">$120.00</span>
+                                            <span class="current_price">{{sploai.giahientai.gia | currency:'VND':true:'1.0-2'}}</span>
                                         </div>
                                         <div class="product_desc">
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco,Proin lectus ipsum, gravida et mattis vulputate, tristique ut lectus</p>
+                                            <p>{{sploai.moTa}}</p>
                                         </div>
                                     </div>
                                     <div class="right_caption">
-                                        <p class="text_available">Availability: <span>In Stock</span></p>
+                                        <p class="text_available">Tình trạng: <span *ngIf="sploai.kho.soLuongCon!=0">Còn hàng</span>
+                                            <span *ngIf="sploai.kho.soLuongCon==0">Hết hàng</span>
+                                        </p>
                                         <div class="action_links">
                                             <ul> 
-                                                <li class="add_to_cart"><a href="cart.html" title="Add to cart">Add to cart</a></li>
+                                                <li class="add_to_cart"><a (click)="addToCart(sploai)" title="Add to cart">Thêm vào giỏ hàng</a></li>
                                                 <li class="wishlist"><a href="wishlist.html" title="Add to Wishlist"><i class="icon-heart"></i>  Add to Wishlist</a></li>
                                                 <li class="compare"><a href="#" title="compare"><i class="icon-rotate-cw"></i>Add to Compare</a></li>
                                             </ul>
@@ -116,13 +116,7 @@
 
                 <div class="shop_toolbar t_bottom">
                     <div class="pagination">
-                        <ul>
-                            <li class="current">1</li>
-                            <li><a href="#">2</a></li>
-                            <li><a href="#">3</a></li>
-                            <li class="next"><a href="#">next</a></li>
-                            <li><a href="#">>></a></li>
-                        </ul>
+                        <ngb-pagination [collectionSize]="tongsl" [pageSize]="size" [(page)]="index" [maxSize]="10" [rotate]="true" (pageChange)="loadPage($event)"></ngb-pagination>
                     </div>
                 </div>
                 <!--shop toolbar end-->
