đóng góp nhỏ của tôi

--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -34,7 +34,7 @@
                     <div class="header_top_links">
                         <ul>
                             <li><a href="login.html">nút</a></li>
-                            <li><a href="login.html">Đăng nhập-đăng ký</a></li>
+                            <li><a href="login">Đăng nhập-đăng ký</a></li>
                             <li><a href="cart.html">Giỏ hàng</a></li>
                             <li><a href="checkout.html">Kênh bán hàng</a></li>
                         </ul>
@@ -212,9 +212,9 @@
                             <div class="header_top_links text-right">
                                 <ul>
                                     <li><a href="login.html">Theo dõi đơn hàng</a></li>
-                                    <li><a href="login.html">Đăng nhập-đăng ký</a></li>
+                                    <li><a routerLink="login">Đăng nhập-đăng ký</a></li>
                                     <li><a routerLink="cart">Giỏ hàng</a></li>
-                                    <li><a href="checkout.html">Kênh bán hàng</a></li>
+                                    <li><a routerLink="cart/check-out">Kênh bán hàng</a></li>
                                 </ul>
                             </div>   
                         </div>
@@ -229,7 +229,7 @@
                     <div class="row align-items-center">
                         <div class="col-lg-2 col-md-4 col-sm-4 col-4">
                             <div class="logo">
-                                <a href="index.html"><img src="assets/img/logo/logo.png" alt=""></a>
+                                <a routerLink=""><img src="assets/img/logo/logo.png" alt=""></a>
                             </div>
                         </div>
                         <div class="col-lg-10 col-md-6 col-sm-6 col-6">
@@ -295,7 +295,7 @@
                                                     <a routerLink="cart">Xem giỏ hàng</a>
                                                 </div>
                                                 <div class="cart_button">
-                                                    <a class="active" href="checkout.html">Đặt hàng</a>
+                                                    <a class="active" routerLink="cart/check-out">Đặt hàng</a>
                                                 </div>
 
                                             </div>
