--- a/src/app/giohang/checkout/checkout.component.html
+++ b/src/app/giohang/checkout/checkout.component.html
@@ -4,8 +4,8 @@
             <div class="col-12">
                 <div class="breadcrumb_content">
                     <ul>
-                        <li><a href="index.html">home</a></li>
-                        <li>Checkout</li>
+                        <li><a routerLink="">home</a></li>
+                        <li>Đặt hàng</li>
                     </ul>
                 </div>
             </div>
@@ -23,20 +23,20 @@
                     <div class="user-actions">
                         <h3> 
                             <i class="fa fa-file-o" aria-hidden="true"></i>
-                            Returning customer?
-                            <a class="Returning" href="#" data-toggle="collapse" data-target="#checkout_login" aria-expanded="true">Click here to login</a>     
+                            Có tài khoản>
+                            <a class="Returning" data-toggle="collapse" data-target="#checkout_login" aria-expanded="true">Đăng nhập</a>     
 
                         </h3>
                          <div id="checkout_login" class="collapse" data-parent="#accordion">
                             <div class="checkout_info">
-                                <p>If you have shopped with us before, please enter your details in the boxes below. If you are a new customer please proceed to the Billing & Shipping section.</p>  
+                                <p>Đăng nhập </p>  
                                 <form action="#">  
                                     <div class="form_group">
-                                        <label>Username or email <span>*</span></label>
+                                        <label>Tên người dùng hoặc email <span>*</span></label>
                                         <input type="text">     
                                     </div>
                                     <div class="form_group">
-                                        <label>Password  <span>*</span></label>
+                                        <label>Mật khẩu  <span>*</span></label>
                                         <input type="text">     
                                     </div> 
                                     <div class="form_group group_3 ">
@@ -50,36 +50,20 @@
                                 </form>          
                             </div>
                         </div>    
-                    </div>
-                    <div class="user-actions">
-                        <h3> 
-                            <i class="fa fa-file-o" aria-hidden="true"></i>
-                            Returning customer?
-                            <a class="Returning" href="#" data-toggle="collapse" data-target="#checkout_coupon" aria-expanded="true">Click here to enter your code</a>     
-
-                        </h3>
-                         <div id="checkout_coupon" class="collapse" data-parent="#accordion">
-                            <div class="checkout_info">
-                                <form action="#">
-                                    <input placeholder="Coupon code" type="text">
-                                    <button type="submit">Apply coupon</button>
-                                </form>
-                            </div>
-                        </div>    
-                    </div>    
+                    </div>  
                </div>
             </div>
             <div class="checkout_form">
                 <div class="row">
                     <div class="col-lg-6 col-md-6">
                         <div class="checkout_form_left">
-                            <form action="#">
+                            <form [formGroup]="formdonhang">
                                 <h3>Thông tin đơn hàng</h3>
                                 <div class="row">
 
                                     <div class="col-lg-12 mb-20">
                                         <label>Họ tên <span>*</span></label>
-                                        <input type="text">    
+                                        <input type="text" formControlName="hoten">    
                                     </div>
                                    
                                     <!-- <div class="col-12 mb-20">
@@ -103,27 +87,37 @@
 
                                     <div class="col-12 mb-20">
                                         <label>Địa chỉ nhận hàng  <span>*</span></label>
-                                        <input placeholder="Địa chỉ" type="text">     
+                                        
+                                    <label for="">Tỉnh/thành</label>
+                                            <select formControlName="tinh" id="" class="form-control" (change)="gethuyenbytinh($event.target.value)" >
+                                                
+                                                <option *ngFor="let tinh of tinhs" value="{{tinh.id}}">{{tinh.type}} {{tinh.name}}</option>
+                                            </select>
+                                         <label for="">Quận/huyện</label>
+                                         <select formControlName="huyen" id="" class="form-control" (change)="getxabyhuyen($event.target.value)"> 
+                                            
+                                            <option *ngFor="let huyen of huyens" value="{{huyen.id}}">{{huyen.type}} {{huyen.name}}</option>
+                                        </select>
+                                     <label for="">Xã/phường</label>
+                                     <select formControlName="xa" id="" class="form-control">
+                                        
+                                        <option *ngFor="let xa of xas" [value]="xa.id">{{xa.type}} {{xa.name}}</option>
+                                    </select>
+                                
+                                  
                                     </div>
-                                    <div class="col-12 mb-20">
-                                        <input placeholder="Apartment, suite, unit etc. (optional)" type="text">     
-                                    </div>
-                                    <div class="col-12 mb-20">
-                                        <label>Town / City <span>*</span></label>
-                                        <input  type="text">    
-                                    </div> 
-                                     <div class="col-12 mb-20">
-                                        <label>State / County <span>*</span></label>
-                                        <input type="text">    
+                                   
+                                    <div class="col-12 mb-20"> <label>Địa chỉ chi tiết</label>
+                                        <input placeholder="điền địa chỉ chi tiết để nhận hàng thuận lợi hơn" formControlName="diachi" type="text">     
                                     </div> 
                                     <div class="col-lg-6 mb-20">
                                         <label>Số điện thoại<span>*</span></label>
-                                        <input type="text"> 
+                                        <input type="text" formControlName="sdt"> 
 
                                     </div> 
                                      <div class="col-lg-6 mb-20">
                                         <label> Email   <span>*</span></label>
-                                          <input type="text"> 
+                                          <input type="text" formControlName="email"> 
 
                                     </div> 
                                     <div class="col-12 mb-20">
