--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -29,6 +29,7 @@
                                     <li><a href="#">INR – India Rupee</a></li>
                                 </ul>
                             </li>
+                           
                         </ul>
                     </div>
                     <div class="header_top_links">
@@ -205,6 +206,7 @@
                                             <li><a href="#">INR – India Rupee</a></li>
                                         </ul>
                                     </li>
+                                    <li style="color: white;">cd</li>
                                 </ul>
                             </div>
                         </div>
